--- a/style.css
+++ b/style.css
@@ -432,6 +432,7 @@ header {
             p {
                 font-size: 2rem;
                 color: white;
+                margin: 0 0 25px 0;
             }
 
             .white {
@@ -454,6 +455,47 @@ header {
             max-height: 500px;
             min-height: 450px;
             height: fit-content;
+
+            #custom-legend {
+                display: flex;
+                flex-direction: column;
+                flex-wrap: wrap;
+                align-items: flex-end;
+                gap: 10px;
+                margin-right: 24px;
+            }
+            
+            .legend-item {
+                display: flex;
+                align-items: center;
+                width: fit-content;
+                gap: 8px;
+                font-family: 'Alatsi', sans-serif;
+                color: #FFF;
+                font-size: 1rem;
+            }
+            
+            .legend-background {
+                width: 70px;
+                height: 20px;
+                background-color: #fff;
+                border-radius: 5px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            
+            .color-box {
+                width: 70%;
+                height: 5px;
+                display: inline-block;
+                border-radius: 5px;
+            }
+
+            .hidden-legend {
+                opacity: 0.5;
+                text-decoration: line-through;
+            }
 
             canvas {
                 width: 100%;
