--- a/style.css
+++ b/style.css
@@ -385,6 +385,7 @@ header {
 .section__condamnation {
     position: relative;
     width: 100vw;
+    max-height: 100vh;
     padding: 3% 8% 0 5%;
     display: flex;
     flex-direction: column;
@@ -447,15 +448,13 @@ header {
         justify-content: space-between;
         align-items: center;
         gap: 50px;
-        margin-bottom: 50px;
+        max-height: 70%;
 
         .section__condamnation-graph {
-            min-width: 55%;
-            max-width: 55%;
-            max-height: 50%;
-            min-height: 90%;
+            min-width: 65%;
+            max-width: 65%;
+            max-height: 100%;
             transform: translateY(-35px);
-            height: fit-content;
 
             #custom-legend {
                 display: flex;
@@ -651,8 +650,22 @@ header {
         pointer-events: none;
         z-index: 1000;
         font-size: 14px;
-        max-width: 200px;
+        max-width: 250px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        font-family: "Montserrat", sans-serif;
+        font-weight: 600;
+
+        .tooltip-title {
+            font-weight: 800;
+            margin: 0 0 5px 0;
+            font-family: "Montserrat", sans-serif;
+        }
+
+        .tooltip-data {
+            font-weight: 800;
+            color: #4D2A7B;
+            font-size: 0.9rem;
+        }
     }
 }
 
